DAWception -webkit-text-size-adjust to stop ridiculous font size on Safari on iPhone horizontal orientation

--- a/dawception/style.scss
+++ b/dawception/style.scss
@@ -1064,3 +1064,7 @@ $feature-card-border-color: rgb(50,50,50);
       font-size: 0.5em;
   }
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  body { -webkit-text-size-adjust: none; }
+}
